; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sun/extr_sungem.c_gem_disable_ints.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sun/extr_sungem.c_gem_disable_ints.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gem = type { i64 }

@GREG_STAT_NAPI = common dso_local global i32 0, align 4
@GREG_STAT_TXDONE = common dso_local global i32 0, align 4
@GREG_IMASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gem*)* @gem_disable_ints to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gem_disable_ints(%struct.gem* %0) #0 {
  %2 = alloca %struct.gem*, align 8
  store %struct.gem* %0, %struct.gem** %2, align 8
  %3 = load i32, i32* @GREG_STAT_NAPI, align 4
  %4 = load i32, i32* @GREG_STAT_TXDONE, align 4
  %5 = or i32 %3, %4
  %6 = load %struct.gem*, %struct.gem** %2, align 8
  %7 = getelementptr inbounds %struct.gem, %struct.gem* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @GREG_IMASK, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @writel(i32 %5, i64 %10)
  %12 = load %struct.gem*, %struct.gem** %2, align 8
  %13 = getelementptr inbounds %struct.gem, %struct.gem* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @GREG_IMASK, align 8
  %16 = add nsw i64 %14, %15
  %17 = call i32 @readl(i64 %16)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
